tests/fixtures/valid/return_bool_literal.torel
unit fixtures.return_bool_literal;

export proc main() -> Bool {
    return true;
}
