tests/fixtures/invalid/unknown_return_value.torel
unit fixtures.unknown_return_value;

export proc main() -> Exit {
    return Exit.nope;
}
